<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:context=".SemChoiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClick"
            android:text="@string/sem_one"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:background="@android:color/holo_orange_light"
            android:text="@string/sem_three"
            android:onClick="onClick"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button31"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:background="@color/design_default_color_primary"
            android:text="@string/sem_five"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button41"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/ele_one"
            android:onClick="onClick"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button51"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:background="@android:color/holo_green_light"
            android:text="@string/ele_three"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:background="@android:color/holo_purple"
            android:text="@string/sem_two"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button22"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:onClick="onClick"
            android:layout_weight="1.0"
            android:background="@android:color/holo_red_light"
            android:text="@string/sem_four"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button32"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:background="@android:color/holo_green_dark"
            android:text="@string/sem_six"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button42"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/ele_two"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/button52"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:background="@android:color/holo_red_dark"
            android:text="@string/ele_four"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>
</LinearLayout>