<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/sym_action_email"
                    android:fontFamily="serif"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:fontFamily="serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:padding="8dp"
                android:text="@string/log_in"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tvForget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/forget_password"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/btnFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary_dark"
                    android:drawableStart="@drawable/fbicon"
                    android:text="@string/log_in"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <Button
                    android:id="@+id/btnGmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:drawableStart="@drawable/google"
                    android:text="@string/sign_up"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:padding="8dp"
                android:text="@string/skip"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>