<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="1dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="1dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/mybutton"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sub_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/sub_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:fontFamily="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/sub_code"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/sub_credit"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tvCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>